...
                            viewModel.tableDataModel.selectAllRows()
                        } else {
                            viewModel.tableDataModel.emptySelection()
                        }
                    }
                    .disabled(viewModel.tableDataModel.filteredcellModels.count == 0)
                    .accessibilityIdentifier("SelectParentAllRowSelectorButton")
            }

            Text("#")
                .frame(width: 40, height: 60)
                .border(Color.tableCellBorderColor)
            
...
                    let startingIndex = viewModel.tableDataModel.filteredcellModels.firstIndex(where: { $0.rowID == rowDataModel.rowID }) ?? 0
                    viewModel.addNestedRow(schemaKey: schemaValue?.0 ?? "", level: level, startingIndex: startingIndex, parentID: parentID)
                }) {
                    AddRowButtonLabel(isReadonly: viewModel.tableDataModel.mode == .readonly)
                }
                .buttonStyle(AddRowButtonStyle())
                .accessibilityIdentifier("collectionSchemaAddRowButton")
            }
            let rowID = parentID.rowID
            let schemaID = schemaValue?.0 ?? ""
            let rowSchemaID = RowSchemaID(rowID: rowID, schemaID: schemaID)
            let childRows = viewModel.parentToChildRowMap[rowSchemaID] ?? []
            
...
                                viewModel.tableDataModel.selectAllNestedRows(rowID: rowModel.rowID)
                            } else {
                                viewModel.tableDataModel.emptySelection()
                            }
                        }
                        .disabled(viewModel.tableDataModel.getAllNestedRowsForRow(rowID: rowModel.rowID).count == 0)
                        .accessibilityIdentifier("selectAllNestedRows")
                }
            case .nestedRow(_, let index, _, _):
                if viewModel.showRowSelector(for: viewModel.tableDataModel) {
                    Image(systemName: isRowSelected ? "record.circle.fill" : "circle")
                        .frame(width: 40, height: 60)
                        .background(Color.rowSelectionBackground(isSelected: isRowSelected, colorScheme: colorScheme))
...
